--- a/package.json
+++ b/package.json
@@ -12,8 +12,14 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "@types/htmlparser2": "^3.7.31",
-    "axios": "^0.19.0",
-    "htmlparser2": "^3.10.0"
-  }
+    "@types/node": "^13.9.5",
+    "@typescript-eslint/eslint-plugin": "^2.25.0",
+    "@typescript-eslint/parser": "^2.25.0",
+    "axios": "^0.19.2",
+    "domhandler": "^3.0.0",
+    "eslint": "^6.8.0",
+    "htmlparser2": "^4.1.0",
+    "typescript": "^3.8.3"
+  },
+  "dependencies": {}
 }
